Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <li><a href="Better%20ingame%20Dejavu.md">Better ingame Dejavu</a></li>
 <li><a href="Ingame%20Overlay.md">Ingame Overlay</a></li>
 <li><a href="Skin%20Enhancer.md">Skin Enhancer</a></li>
-<li><a href="Relay%20Server.md">Relay Server</a></li>
+<li>
+<a href="Relay%20Server.md">Relay Server</a> (<a href="https://github.com/The-Aquila-Network-Community/osu-relay-server">in progress</a>)</li>
 <li><a href="Relax%20Assist.md">Relax Assist</a></li>
 <li><a href="Internal%20API.md">Internal API</a></li>
 <li><a href="Gameplay%20Changer.md">Gameplay Changer</a></li>
@@ -50,7 +51,7 @@
 </ol>
 
 <h3>
-<a id="whatever-related" class="anchor" href="#whatever-related" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>whatever related</h3>
+<a id="other" class="anchor" href="#other" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other</h3>
 
 <ol>
 <li>
@@ -70,13 +71,12 @@ and you don't need to include all the features mentioned.
 You can take these ideas, adapt them to your needs and apply them in a way you'd like.
 Sharing the code afterwards would be appreciated, but is not needed.</p>
 
-<h1>
-<a id="completed" class="anchor" href="#completed" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Completed</h1>
+<h2>
+<a id="completed" class="anchor" href="#completed" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Completed</h2>
 
 <ol>
 <li>
-<a href="Completed/Steam%20like%20notificator.md"><del>Steam like notificator</del></a> <a href="https://github.com/The-Aquila-Network-Community/Steam-like-notificator">This has been made: Steam like notificator</a>
-</li>
+<a href="https://github.com/The-Aquila-Network-Community/Steam-like-notificator">Steam like notificator</a> by RapleAQN</li>
 </ol>
         </section>
 
