--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
           <h1>
 <a id="projects" class="anchor" href="#projects" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Projects</h1>
 
+<p><strong>Note</strong>: If you are reading this on github.io, links won't properly redirect. Find correct links <a href="https://github.com/The-Aquila-Network-Community/Project-Suggestions/README.md">here</a></p>
+
+<h2>
+<a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Disclaimer</h2>
+
+<p>Please keep in mind that these are only suggestions. You don't need to make them exactly like described,
+and you don't need to include all the features mentioned.
+You can take these ideas, adapt them to your needs and apply them in a way you'd like.
+Sharing the code afterwards would be appreciated, but is not needed.</p>
+
 <h3>
 <a id="osu-related" class="anchor" href="#osu-related" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>osu! related</h3>
 
@@ -63,16 +73,8 @@
 <li><a href="TetrisFriends%20Bot.md">TetrisFriends Bot</a></li>
 </ol>
 
-<h2>
-<a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Disclaimer</h2>
-
-<p>Please keep in mind that these are only suggestions. You don't need to make them exactly like described,
-and you don't need to include all the features mentioned.
-You can take these ideas, adapt them to your needs and apply them in a way you'd like.
-Sharing the code afterwards would be appreciated, but is not needed.</p>
-
-<h2>
-<a id="completed" class="anchor" href="#completed" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Completed</h2>
+<h3>
+<a id="completed" class="anchor" href="#completed" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Completed</h3>
 
 <ol>
 <li>
